# fast_prac

quickstart/: main.py  pyproject.toml
