[tool.poetry]
name = "myfast"
version = "0.1.0"
description = ""
authors = ["opalcat <noblesse3539@daum.net>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
